--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
             <version>1.4.199</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.6</version>
+        </dependency>
 
     </dependencies>
 
