--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.camel/camel-core -->
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>3.0.0-M3</version>
         </dependency>
-
     </dependencies>
 
     
