--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
-            <version>3.0.0-M3</version>
+            <version>2.24.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-http</artifactId>
+            <version>2.24.1</version>
         </dependency>
     </dependencies>
 
