--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <version>2.21.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-common</artifactId>
+            <version>2.29</version>
+        </dependency>
     </dependencies>
 
 </project>
