--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>2.24.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-zipfile</artifactId>
+            <version>2.24.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.5.0</version>
@@ -90,6 +95,7 @@
             <artifactId>jersey-common</artifactId>
             <version>2.29</version>
         </dependency>
+
     </dependencies>
 
 </project>
