--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,11 @@
             <artifactId>jersey-common</artifactId>
             <version>2.29</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.0</version>
+        </dependency>
     </dependencies>
 
 </project>
