Logbook update renewed

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -20,7 +20,7 @@ appender.FILE.layout.type = PatternLayout
 appender.FILE.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
 appender.FILE.policies.type = Policies
 appender.FILE.policies.size.type = SizeBasedTriggeringPolicy
-appender.FILE.policies.size.size=1KB
+appender.FILE.policies.size.size=1MB
 appender.FILE.strategy.type = DefaultRolloverStrategy
 appender.FILE.strategy.max = 20
 
@@ -33,7 +33,7 @@ appender.FILE2.layout.type = PatternLayout
 appender.FILE2.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
 appender.FILE2.policies.type = Policies
 appender.FILE2.policies.size.type = SizeBasedTriggeringPolicy
-appender.FILE2.policies.size.size=1KB
+appender.FILE2.policies.size.size=1MB
 appender.FILE2.strategy.type = DefaultRolloverStrategy
 appender.FILE2.strategy.max = 20
 
