Catching error in camel package and refactoring using SonarLint

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@ name = PropertiesConfig
 property.file_directory = c:\\Dev\\logs\\
 
 #Define root logger options
-log4j.rootLogger=DEBUG, console, FILE, FILE2
+log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3
 
 #Define console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -37,6 +37,19 @@ appender.FILE2.policies.size.size=1MB
 appender.FILE2.strategy.type = DefaultRolloverStrategy
 appender.FILE2.strategy.max = 20
 
+#EntitiesParser File appender
+appender.FILE3.type = RollingFile
+appender.FILE3.name = entityParserLoggerFile
+appender.FILE3.fileName = ${file_directory}app-entityParser-log.log
+appender.FILE3.filePattern = ${file_directory}app-entityParser-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE3.layout.type = PatternLayout
+appender.FILE3.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+appender.FILE3.policies.type = Policies
+appender.FILE3.policies.size.type = SizeBasedTriggeringPolicy
+appender.FILE3.policies.size.size=1MB
+appender.FILE3.strategy.type = DefaultRolloverStrategy
+appender.FILE3.strategy.max = 20
+
 #Service File logger
 logger.serviceLoggerFile.name = dao
 logger.serviceLoggerFile.level = debug
@@ -48,3 +61,10 @@ logger.strategyLoggerFile.name = strategy
 logger.strategyLoggerFile.level = debug
 logger.strategyLoggerFile.additivity = false
 logger.strategyLoggerFile.appenderRef.FILE2.ref = strategyLoggerFile
+
+#Entity Parser File logger
+logger.camelAndEntityParserLoggerFile.name = camel
+logger.camelAndEntityParserLoggerFile.level = debug
+logger.camelAndEntityParserLoggerFile.additivity = false
+logger.camelAndEntityParserLoggerFile.appenderRef.FILE3.ref = camelAndEntityParserLoggerFile
+
