Configuration logging and refactoring

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@ name = PropertiesConfig
 property.file_directory = c:\\Dev\\logs\\
 
 #Define root logger options
-log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3
+log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3, FILE4
 
 #Define console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -50,6 +50,19 @@ appender.FILE3.policies.size.size=1MB
 appender.FILE3.strategy.type = DefaultRolloverStrategy
 appender.FILE3.strategy.max = 20
 
+#Configuration File appender
+appender.FILE4.type = RollingFile
+appender.FILE4.name = configurationLoggerFile
+appender.FILE4.fileName = ${file_directory}app-configuration-log.log
+appender.FILE4.filePattern = ${file_directory}app-configuration-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE4.layout.type = PatternLayout
+appender.FILE4.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+appender.FILE4.policies.type = Policies
+appender.FILE4.policies.size.type = SizeBasedTriggeringPolicy
+appender.FILE4.policies.size.size=1MB
+appender.FILE4.strategy.type = DefaultRolloverStrategy
+appender.FILE4.strategy.max = 20
+
 #Service File logger
 logger.serviceLoggerFile.name = dao
 logger.serviceLoggerFile.level = debug
@@ -67,4 +80,10 @@ logger.camelAndEntityParserLoggerFile.name = camel
 logger.camelAndEntityParserLoggerFile.level = debug
 logger.camelAndEntityParserLoggerFile.additivity = false
 logger.camelAndEntityParserLoggerFile.appenderRef.FILE3.ref = camelAndEntityParserLoggerFile
+
+#Configuration File logger
+logger.configurationLoggerFile.name = configuration
+logger.configurationLoggerFile.level = debug
+logger.configurationLoggerFile.additivity = false
+logger.configurationLoggerFile.appenderRef.FILE4.ref = configurationLoggerFile
 
