--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@ name = PropertiesConfig
 property.file_directory = c:\\Dev\\logs\\
 
 #Define root logger options
-log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3, FILE4
+log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3, FILE4, FILE5
 
 #Define console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -63,6 +63,19 @@ appender.FILE4.policies.size.size=1MB
 appender.FILE4.strategy.type = DefaultRolloverStrategy
 appender.FILE4.strategy.max = 20
 
+#Model File appender
+appender.FILE5.type = RollingFile
+appender.FILE5.name = modelFile
+appender.FILE5.fileName = ${file_directory}app-model-log.log
+appender.FILE5.filePattern = ${file_directory}app-model-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE5.layout.type = PatternLayout
+appender.FILE5.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+appender.FILE5.policies.type = Policies
+appender.FILE5.policies.size.type = SizeBasedTriggeringPolicy
+appender.FILE5.policies.size.size=1MB
+appender.FILE5.strategy.type = DefaultRolloverStrategy
+appender.FILE5.strategy.max = 20
+
 #Service File logger
 logger.serviceLoggerFile.name = dao
 logger.serviceLoggerFile.level = debug
@@ -86,4 +99,10 @@ logger.configurationLoggerFile.name = configuration
 logger.configurationLoggerFile.level = debug
 logger.configurationLoggerFile.additivity = false
 logger.configurationLoggerFile.appenderRef.FILE4.ref = configurationLoggerFile
+
+#Model File logger
+logger.modelFile.name = model
+logger.modelFile.level = debug
+logger.modelFile.additivity = false
+logger.modelFile.appenderRef.FILE5.ref = modelFile
 
