Implementing Integration Test using Arquillian

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -39,9 +39,9 @@ appender.FILE2.strategy.max = 20
 
 #EntitiesParser File appender
 appender.FILE3.type = RollingFile
-appender.FILE3.name = entityParserLoggerFile
-appender.FILE3.fileName = ${file_directory}app-entityParser-log.log
-appender.FILE3.filePattern = ${file_directory}app-entityParser-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE3.name = camelAndEntityParserLoggerFile
+appender.FILE3.fileName = ${file_directory}app-camel-log.log
+appender.FILE3.filePattern = ${file_directory}app-camel-log.%d{yyyy-MM-dd HH mm ss}-%i
 appender.FILE3.layout.type = PatternLayout
 appender.FILE3.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
 appender.FILE3.policies.type = Policies
