Fixed log4j test log.

--- a/src/test/resources/log4j2.properties
+++ b/src/test/resources/log4j2.properties
@@ -26,6 +26,6 @@ appender.FILE6.strategy.max = 20
 
 #Service File logger
 logger.testFile.name = test
-logger.testFile.level = all
+logger.testFile.level = debug
 logger.testFile.additivity = false
-logger.testFile.appenderRef.FILE.ref = testFile
+logger.testFile.appenderRef.FILE6.ref = testFile
