Archive, Archive Dao, Logbook Serializer, Entity.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@ name = PropertiesConfig
 property.file_directory = c:\\Dev\\logs\\
 
 #Define root logger options
-log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3, FILE4, FILE5
+log4j.rootLogger=DEBUG, console, FILE, FILE2, FILE3, FILE4, FILE5, FILE6
 
 #Define console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
@@ -76,6 +76,19 @@ appender.FILE5.policies.size.size=1MB
 appender.FILE5.strategy.type = DefaultRolloverStrategy
 appender.FILE5.strategy.max = 20
 
+#Service File appender
+appender.FILE6.type = RollingFile
+appender.FILE6.name = archivatorFile
+appender.FILE6.fileName = ${file_directory}app-timer-log.log
+appender.FILE6.filePattern = ${file_directory}app-timer-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE6.layout.type = PatternLayout
+appender.FILE6.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+appender.FILE6.policies.type = Policies
+appender.FILE6.policies.size.type = SizeBasedTriggeringPolicy
+appender.FILE6.policies.size.size=1MB
+appender.FILE6.strategy.type = DefaultRolloverStrategy
+appender.FILE6.strategy.max = 20
+
 #Service File logger
 logger.serviceLoggerFile.name = dao
 logger.serviceLoggerFile.level = debug
@@ -105,3 +118,9 @@ logger.modelFile.name = model
 logger.modelFile.level = debug
 logger.modelFile.additivity = false
 logger.modelFile.appenderRef.FILE5.ref = modelFile
+
+#Archivator File logger
+logger.archivatorFile.name = timer
+logger.archivatorFile.level = debug
+logger.archivatorFile.additivity = true
+logger.archivatorFile.appenderRef.FILE6.ref = archivatorFile
