--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,6 +19,14 @@
     <login-config>
         <auth-method>BASIC</auth-method>
     </login-config>
+<!--    <login-config>-->
+<!--        <auth-method>FORM</auth-method>-->
+<!--        <form-login-config>-->
+<!--            <form-login-page>/faces/login.xhtml</form-login-page>-->
+<!--            <form-error-page>/faces/error.xhtml</form-error-page>-->
+<!--        </form-login-config>-->
+<!--    </login-config>-->
+
     <security-role>
         <role-name>Manager</role-name>
     </security-role>
