Form based JWT Token implementation and logbook Create method locking.

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -89,6 +89,19 @@ appender.FILE6.policies.size.size=1MB
 appender.FILE6.strategy.type = DefaultRolloverStrategy
 appender.FILE6.strategy.max = 20
 
+#Service File appender
+appender.FILE7.type = RollingFile
+appender.FILE7.name = controllerFile
+appender.FILE7.fileName = ${file_directory}app-controller-log.log
+appender.FILE7.filePattern = ${file_directory}app-controller-log.%d{yyyy-MM-dd HH mm ss}-%i
+appender.FILE7.layout.type = PatternLayout
+appender.FILE7.layout.pattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %m%n
+appender.FILE7.policies.type = Policies
+appender.FILE7.policies.size.type = SizeBasedTriggeringPolicy
+appender.FILE7.policies.size.size=1MB
+appender.FILE7.strategy.type = DefaultRolloverStrategy
+appender.FILE7.strategy.max = 20
+
 #Service File logger
 logger.serviceLoggerFile.name = dao
 logger.serviceLoggerFile.level = debug
@@ -124,3 +137,9 @@ logger.archivatorFile.name = timer
 logger.archivatorFile.level = debug
 logger.archivatorFile.additivity = true
 logger.archivatorFile.appenderRef.FILE6.ref = archivatorFile
+
+#Controller File logger
+logger.controllerFile.name = controller
+logger.controllerFile.level = debug
+logger.controllerFile.additivity = true
+logger.controllerFile.appenderRed.File7.ref = controllerFile
